--- a/데이터_전처리.ipynb
+++ b/데이터_전처리.ipynb
@@ -6,7 +6,7 @@
       "name": "데이터_전처리.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOzo2LgVrQYdfgro4U+8soX",
+      "authorship_tag": "ABX9TyOsUMrcxwEihFLvY6PfX4Wm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "b11552fb-2a00-4582-b3bc-3e01c0972bce"
+        "outputId": "b83b17b5-0416-49a5-f00e-2cd4b6676d72"
       },
       "source": [
         "from google.colab import drive\n",
@@ -60,7 +60,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 102
         },
-        "outputId": "81ca470e-c90d-419d-d1d7-31c15b2d314f"
+        "outputId": "9c8c237f-4803-45fa-c427-df44ce0109e8"
       },
       "source": [
         "import matplotlib as mpl\n",
@@ -78,7 +78,7 @@
         "\n",
         "plt.rcParams[\"figure.figsize\"] = (10,10)"
       ],
-      "execution_count": 1,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -100,9 +100,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 700
+          "height": 578
         },
-        "outputId": "fef29a31-78cf-4527-f4a7-8147a5ed50ae"
+        "outputId": "e28f89cb-debb-46d8-e274-d13f82cda968"
       },
       "source": [
         "import pandas as pd\n",
@@ -130,8 +130,13 @@
         "df19 = df19.rename({\"vlm\":\"vlm19\",\"usec\":\"usec19\"},axis=\"columns\")\n",
         "del df19['v1']\n",
         "\n",
-        "data20 = df20.groupby([df20[\"v2\"],df20[\"gb3\"],df20[\"gb2\"],df20[\"sex_ccd\"],df20[\"cln_age_r\"],df20[\"ta_ym\"],df20[\"daw_ccd_r\"],df20[\"apv_ts_dl_tm_r\"]]).sum()\n",
-        "data19 = df19.groupby([df19[\"v2\"],df19[\"gb3\"],df19[\"gb2\"],df19[\"sex_ccd\"],df19[\"cln_age_r\"],df19[\"ta_ym\"],df19[\"daw_ccd_r\"],df19[\"apv_ts_dl_tm_r\"]]).sum()\n",
+        "#data20 = df20.groupby([df20[\"v2\"],df20[\"gb3\"],df20[\"gb2\"],df20[\"sex_ccd\"],df20[\"cln_age_r\"],df20[\"ta_ym\"],df20[\"daw_ccd_r\"],df20[\"apv_ts_dl_tm_r\"]]).sum()\n",
+        "#data20 = df20.groupby([df20[\"v2\"],df20[\"gb3\"],df20[\"gb2\"],df20[\"sex_ccd\"],df20[\"cln_age_r\"],df20[\"ta_ym\"]]).sum()\n",
+        "data20 = df20.groupby([df20[\"v2\"],df20[\"gb3\"],df20[\"sex_ccd\"],df20[\"cln_age_r\"],df20[\"ta_ym\"]]).sum()\n",
+        "\n",
+        "#data19 = df19.groupby([df19[\"v2\"],df19[\"gb3\"],df19[\"gb2\"],df19[\"sex_ccd\"],df19[\"cln_age_r\"],df19[\"ta_ym\"],df19[\"daw_ccd_r\"],df19[\"apv_ts_dl_tm_r\"]]).sum()\n",
+        "#data19 = df19.groupby([df19[\"v2\"],df19[\"gb3\"],df19[\"gb2\"],df19[\"sex_ccd\"],df19[\"cln_age_r\"],df19[\"ta_ym\"]]).sum()\n",
+        "data19 = df19.groupby([df19[\"v2\"],df19[\"gb3\"],df19[\"sex_ccd\"],df19[\"cln_age_r\"],df19[\"ta_ym\"]]).sum()\n",
         "\n",
         "df = pd.merge(data20, data19, left_index=True, right_index=True, how=\"outer\")\n",
         "\n",
@@ -152,57 +157,51 @@
         "print(\"==================================================\")\n",
         "print(\"v2 : \",len(list(set(df['v2']))),list(set(df['v2'])))\n",
         "print(\"gb3 : \",len(list(set(df['gb3']))),list(set(df['gb3'])))\n",
-        "print(\"gb2 : \",len(list(set(df['gb2']))),list(set(df['gb2'])))\n",
+        "#print(\"gb2 : \",len(list(set(df['gb2']))),list(set(df['gb2'])))\n",
         "print(\"sex_ccd : \",len(list(set(df['sex_ccd']))),list(set(df['sex_ccd'])))\n",
         "print(\"cln_age_r : \",len(list(set(df['cln_age_r']))),list(set(df['cln_age_r'])))\n",
         "print(\"ta_ym : \",len(list(set(df['ta_ym']))),list(set(df['ta_ym'])))\n",
-        "print(\"daw_ccd_r : \",len(list(set(df['daw_ccd_r']))),list(set(df['daw_ccd_r'])))\n",
-        "print(\"apv_ts_dl_tm_r : \",len(list(set(df['apv_ts_dl_tm_r']))),list(set(df['apv_ts_dl_tm_r'])))"
+        "#print(\"daw_ccd_r : \",len(list(set(df['daw_ccd_r']))),list(set(df['daw_ccd_r'])))\n",
+        "#print(\"apv_ts_dl_tm_r : \",len(list(set(df['apv_ts_dl_tm_r']))),list(set(df['apv_ts_dl_tm_r'])))"
       ],
-      "execution_count": 2,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "        v2     gb3   gb2  ...  usec19 vlm_usec_ratio vlm_ratio\n",
-            "0       강원  문화예술활동  공연관람  ...  6124.0       1.244721 -0.016053\n",
-            "1       강원  문화예술활동  공연관람  ...  2706.0       1.140528 -0.300763\n",
-            "2       강원  문화예술활동  공연관람  ...    20.0       0.821813 -0.096005\n",
-            "3       강원  문화예술활동  공연관람  ...  9021.0       1.324142 -0.118706\n",
-            "4       강원  문화예술활동  공연관람  ...  5101.0       1.121877 -0.339102\n",
-            "...     ..     ...   ...  ...     ...            ...       ...\n",
-            "102780  충북    취미오락  패션쇼핑  ...   745.0       1.025321  0.301951\n",
-            "102781  충북    취미오락  패션쇼핑  ...  3479.0       0.835799  0.117362\n",
-            "102782  충북    취미오락  패션쇼핑  ...   230.0       0.769694  0.388795\n",
-            "102783  충북    취미오락  패션쇼핑  ...  5729.0       0.823586  0.598438\n",
-            "102784  충북    취미오락  패션쇼핑  ...   620.0       0.528654 -0.233452\n",
+            "      v2     gb3 sex_ccd  ...  usec19 vlm_usec_ratio  vlm_ratio\n",
+            "0     강원  문화예술활동       F  ...   29386       1.243426  -0.081542\n",
+            "1     강원  문화예술활동       F  ...   28005       1.336065  -0.493340\n",
+            "2     강원  문화예술활동       F  ...   25285       1.397372  -0.293273\n",
+            "3     강원  문화예술활동       F  ...   30074       1.500363  -0.128489\n",
+            "4     강원  문화예술활동       F  ...   37932       3.144255   0.910575\n",
+            "...   ..     ...     ...  ...     ...            ...        ...\n",
+            "3395  충북    취미오락       M  ...  726604       0.916454   0.020124\n",
+            "3396  충북    취미오락       M  ...  876332       0.909863  -0.060673\n",
+            "3397  충북    취미오락       M  ...  876258       0.971983   0.074210\n",
+            "3398  충북    취미오락       M  ...  943264       1.026779   0.342179\n",
+            "3399  충북    취미오락       M  ...  926218       0.980517   0.217762\n",
             "\n",
-            "[102785 rows x 14 columns]\n",
+            "[3400 rows x 11 columns]\n",
             "==================================================\n",
             "v2                 object\n",
             "gb3                object\n",
-            "gb2                object\n",
             "sex_ccd            object\n",
             "cln_age_r          object\n",
             "ta_ym              object\n",
-            "daw_ccd_r          object\n",
-            "apv_ts_dl_tm_r     object\n",
             "vlm20             float64\n",
-            "usec20            float64\n",
+            "usec20              int64\n",
             "vlm19             float64\n",
-            "usec19            float64\n",
+            "usec19              int64\n",
             "vlm_usec_ratio    float64\n",
             "vlm_ratio         float64\n",
             "dtype: object\n",
             "==================================================\n",
-            "v2 :  17 ['충남', '충북', '대구', '전남', '제주', '광주', '경기', '경남', '대전', '경북', '인천', '부산', '강원', '전북', '울산', '세종', '서울']\n",
-            "gb3 :  4 ['문화예술활동', '스포츠활동', '취미오락', '여행']\n",
-            "gb2 :  28 ['레저스포츠', '독서', '목욕', '자전거', '여행사', '스포츠용품구매', '교육훈련', '종교활동', '패션쇼핑', '미용', '체험', '애완동물돌보기', '교통', '음악감상', '종합쇼핑', '운동경기관람', '유흥', '외식', '헬스', '숙박', '인터넷게임', '공연관람', '미술공예참여', '사진촬영', '골프', '관광쇼핑', '스키', '악기연주']\n",
-            "sex_ccd :  2 ['F', 'M']\n",
+            "v2 :  17 ['세종', '대구', '광주', '울산', '경남', '부산', '강원', '대전', '충남', '전북', '제주', '인천', '경북', '전남', '충북', '경기', '서울']\n",
+            "gb3 :  4 ['취미오락', '스포츠활동', '여행', '문화예술활동']\n",
+            "sex_ccd :  2 ['M', 'F']\n",
             "cln_age_r :  5 [40, 50, 20, 60, 30]\n",
-            "ta_ym :  5 [2, 3, 4, 5, 6]\n",
-            "daw_ccd_r :  2 ['RED', 'WHITE']\n",
-            "apv_ts_dl_tm_r :  3 ['활동', '휴식', '취침']\n"
+            "ta_ym :  5 [2, 3, 4, 5, 6]\n"
           ],
           "name": "stdout"
         }
@@ -217,7 +216,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 340
         },
-        "outputId": "8b13a408-efe6-4838-c857-e5daea632200"
+        "outputId": "d12a2c8e-4827-4183-e5ef-30ea07dc2222"
       },
       "source": [
         "import pandas as pd\n",
@@ -228,7 +227,7 @@
         "\n",
         "print(population)"
       ],
-      "execution_count": 3,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -266,7 +265,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 153
         },
-        "outputId": "609281b0-530b-46de-c54b-0e228696dd8e"
+        "outputId": "5539f139-d872-40eb-8c71-3f782fe0e4d3"
       },
       "source": [
         "import pandas as pd\n",
@@ -309,7 +308,7 @@
         "\n",
         "print(df_Time)"
       ],
-      "execution_count": 4,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -336,7 +335,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "outputId": "242adc5c-14b6-4778-b794-ade7b595099d"
+        "outputId": "1d38ad5f-5113-4f0f-e688-960ac329f1b2"
       },
       "source": [
         "import pandas as pd\n",
@@ -585,7 +584,7 @@
         "\n",
         "print(df_TimeProvince)"
       ],
-      "execution_count": 5,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -883,32 +882,29 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 765
+          "height": 714
         },
-        "outputId": "ca8312b9-8c2f-456c-a3b6-4b5674ae4d49"
+        "outputId": "e6be9f5d-3cf2-4dea-ba1c-415958730b9e"
       },
       "source": [
         "print(df.dtypes)\n",
         "print(df_Time.dtypes)\n",
         "print(df_TimeProvince.dtypes)"
       ],
-      "execution_count": 6,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "v2                 object\n",
             "gb3                object\n",
-            "gb2                object\n",
             "sex_ccd            object\n",
             "cln_age_r          object\n",
             "ta_ym              object\n",
-            "daw_ccd_r          object\n",
-            "apv_ts_dl_tm_r     object\n",
             "vlm20             float64\n",
-            "usec20            float64\n",
+            "usec20              int64\n",
             "vlm19             float64\n",
-            "usec19            float64\n",
+            "usec19              int64\n",
             "vlm_usec_ratio    float64\n",
             "vlm_ratio         float64\n",
             "dtype: object\n",
@@ -955,7 +951,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 459
         },
-        "outputId": "908f71d4-bd3c-4613-b539-3912e4e37969"
+        "outputId": "b57d47c3-c8d9-476c-96e0-2f375f104761"
       },
       "source": [
         "df = pd.merge(df,df_Time,left_on=[\"ta_ym\"],right_on=[\"date\"],how=\"left\")\n",
@@ -972,47 +968,47 @@
         "\n",
         "df = pd.merge(df,pd.get_dummies(df.v2),left_index=True,right_index=True,how=\"left\")\n",
         "df = pd.merge(df,pd.get_dummies(df.gb3),left_index=True,right_index=True,how=\"left\")\n",
-        "df = pd.merge(df,pd.get_dummies(df.gb2),left_index=True,right_index=True,how=\"left\")\n",
+        "#df = pd.merge(df,pd.get_dummies(df.gb2),left_index=True,right_index=True,how=\"left\")\n",
         "df = pd.merge(df,pd.get_dummies(df.sex_ccd),left_index=True,right_index=True,how=\"left\")\n",
         "df = pd.merge(df,pd.get_dummies(df.cln_age_r),left_index=True,right_index=True,how=\"left\")\n",
         "df = pd.merge(df,pd.get_dummies(df.ta_ym),left_index=True,right_index=True,how=\"left\")\n",
-        "df = pd.merge(df,pd.get_dummies(df.daw_ccd_r),left_index=True,right_index=True,how=\"left\")\n",
-        "df = pd.merge(df,pd.get_dummies(df.apv_ts_dl_tm_r),left_index=True,right_index=True,how=\"left\")\n",
+        "#df = pd.merge(df,pd.get_dummies(df.daw_ccd_r),left_index=True,right_index=True,how=\"left\")\n",
+        "#df = pd.merge(df,pd.get_dummies(df.apv_ts_dl_tm_r),left_index=True,right_index=True,how=\"left\")\n",
         "\n",
         "print(df)\n",
         "print(df.dtypes)"
       ],
-      "execution_count": 7,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "        v2     gb3   gb2 sex_ccd cln_age_r ta_ym  ...  6 RED  WHITE  취침  활동  휴식\n",
-            "0       강원  문화예술활동  공연관람       F        20     2  ...  0   1      0   0   1   0\n",
-            "1       강원  문화예술활동  공연관람       F        20     2  ...  0   1      0   0   0   1\n",
-            "2       강원  문화예술활동  공연관람       F        20     2  ...  0   0      1   1   0   0\n",
-            "3       강원  문화예술활동  공연관람       F        20     2  ...  0   0      1   0   1   0\n",
-            "4       강원  문화예술활동  공연관람       F        20     2  ...  0   0      1   0   0   1\n",
-            "...     ..     ...   ...     ...       ...   ...  ... ..  ..    ...  ..  ..  ..\n",
-            "102780  충북    취미오락  패션쇼핑       M        60     5  ...  0   0      1   0   0   1\n",
-            "102781  충북    취미오락  패션쇼핑       M        60     6  ...  1   1      0   0   1   0\n",
-            "102782  충북    취미오락  패션쇼핑       M        60     6  ...  1   1      0   0   0   1\n",
-            "102783  충북    취미오락  패션쇼핑       M        60     6  ...  1   0      1   0   1   0\n",
-            "102784  충북    취미오락  패션쇼핑       M        60     6  ...  1   0      1   0   0   1\n",
+            "      v2     gb3 sex_ccd cln_age_r ta_ym         vlm20  ...  60  2  3  4  5  6\n",
+            "0     강원  문화예술활동       F        20     2  3.591219e+08  ...   0  1  0  0  0  0\n",
+            "1     강원  문화예술활동       F        20     3  1.926918e+08  ...   0  0  1  0  0  0\n",
+            "2     강원  문화예술활동       F        20     4  2.321777e+08  ...   0  0  0  1  0  0\n",
+            "3     강원  문화예술활동       F        20     5  3.448882e+08  ...   0  0  0  0  1  0\n",
+            "4     강원  문화예술활동       F        20     6  8.918946e+08  ...   0  0  0  0  0  1\n",
+            "...   ..     ...     ...       ...   ...           ...  ...  .. .. .. .. .. ..\n",
+            "3395  충북    취미오락       M        60     2  2.445052e+10  ...   1  1  0  0  0  0\n",
+            "3396  충북    취미오락       M        60     3  2.638102e+10  ...   1  0  1  0  0  0\n",
+            "3397  충북    취미오락       M        60     4  2.889770e+10  ...   1  0  0  1  0  0\n",
+            "3398  충북    취미오락       M        60     5  3.891540e+10  ...   1  0  0  0  1  0\n",
+            "3399  충북    취미오락       M        60     6  3.439147e+10  ...   1  0  0  0  0  1\n",
             "\n",
-            "[102785 rows x 104 columns]\n",
+            "[3400 rows x 68 columns]\n",
             "v2           object\n",
             "gb3          object\n",
-            "gb2          object\n",
             "sex_ccd      object\n",
             "cln_age_r    object\n",
+            "ta_ym        object\n",
             "              ...  \n",
-            "RED           uint8\n",
-            "WHITE         uint8\n",
-            "취침            uint8\n",
-            "활동            uint8\n",
-            "휴식            uint8\n",
-            "Length: 104, dtype: object\n"
+            "2             uint8\n",
+            "3             uint8\n",
+            "4             uint8\n",
+            "5             uint8\n",
+            "6             uint8\n",
+            "Length: 68, dtype: object\n"
           ],
           "name": "stdout"
         }
@@ -1026,9 +1022,9 @@
         "colab": {}
       },
       "source": [
-        "#df.to_csv(\"/gdrive/My Drive/한양대학교/2020년 문화관광 빅데이터 분석대회/data/dataset.csv\",encoding='cp949', index=False)"
+        "df.to_csv(\"/gdrive/My Drive/한양대학교/2020년 문화관광 빅데이터 분석대회/data/dataset.csv\",encoding='cp949', index=False)"
       ],
-      "execution_count": 9,
+      "execution_count": 18,
       "outputs": []
     }
   ]
