--- a/데이터_전처리.ipynb
+++ b/데이터_전처리.ipynb
@@ -6,7 +6,7 @@
       "name": "데이터_전처리.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNU9SjY96fGaxSJ5V9rkomV",
+      "authorship_tag": "ABX9TyPl5mExb4df9yCn5ij2Prql",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -74,7 +74,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 578
         },
-        "outputId": "adba983d-92ad-4329-bc9e-ed3c4cad10e8"
+        "outputId": "a01ccb19-acef-4fbc-b110-feeff029128d"
       },
       "source": [
         "import pandas as pd\n",
@@ -169,8 +169,8 @@
             "vlm_ratio         float64\n",
             "dtype: object\n",
             "==================================================\n",
-            "v2 :  17 ['강원', '세종', '서울', '제주', '대구', '충북', '울산', '충남', '경북', '경기', '전남', '광주', '부산', '경남', '전북', '인천', '대전']\n",
-            "gb3 :  4 ['여행', '스포츠활동', '문화예술활동', '취미오락']\n",
+            "v2 :  17 ['전북', '충남', '서울', '대전', '충북', '부산', '광주', '강원', '울산', '경남', '전남', '제주', '경기', '인천', '세종', '대구', '경북']\n",
+            "gb3 :  4 ['스포츠활동', '문화예술활동', '취미오락', '여행']\n",
             "sex_ccd :  2 ['M', 'F']\n",
             "cln_age_r :  5 [40, 50, 20, 60, 30]\n",
             "ta_ym :  5 [2, 3, 4, 5, 6]\n"
@@ -188,7 +188,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 340
         },
-        "outputId": "4ddef009-afe9-44a4-93e7-f732d9d45cd6"
+        "outputId": "9fdea897-3e50-4415-810c-d630e41e0742"
       },
       "source": [
         "import pandas as pd\n",
@@ -237,7 +237,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 153
         },
-        "outputId": "40a24bcd-2553-41ab-a274-ff63f2c0e349"
+        "outputId": "7902a7c3-9006-416f-8f71-0ae230ba2d27"
       },
       "source": [
         "import pandas as pd\n",
@@ -307,7 +307,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "outputId": "103e3108-12c2-4f85-bff1-020fa490ad8f"
+        "outputId": "a0b00e9b-57d9-417e-d222-d0aa0c350732"
       },
       "source": [
         "import pandas as pd\n",
@@ -746,33 +746,7 @@
             "A value is trying to be set on a copy of a slice from a DataFrame.\n",
             "Try using .loc[row_indexer,col_indexer] = value instead\n",
             "\n",
-            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n"
-          ],
-          "name": "stderr"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "     date province  confirmed  ...  confirmed_diff  released_diff  deceased_diff\n",
-            "680     2       서울   0.790801  ...        0.790801       0.092431       0.000000\n",
-            "1207    3       서울   3.832065  ...        3.040995       0.914353       0.000000\n",
-            "1717    4       서울   1.881402  ...       -1.953369       2.549660       0.020562\n",
-            "2244    5       서울   2.344595  ...        0.462749      -1.768729       0.000000\n",
-            "2754    6       서울   4.639514  ...        2.294039       1.892839       0.010287\n",
-            "...   ...      ...        ...  ...             ...            ...            ...\n",
-            "696     2       제주   0.298118  ...        0.298118       0.000000       0.000000\n",
-            "1223    3       제주   1.043985  ...        0.745703       0.447422       0.000000\n",
-            "1733    4       제주   0.596485  ...       -0.447364       0.298243       0.000000\n",
-            "2260    5       제주   0.298155  ...       -0.298155       0.000000       0.000000\n",
-            "2770    6       제주   0.595845  ...        0.297922      -0.297922       0.000000\n",
-            "\n",
-            "[85 rows x 11 columns]\n"
-          ],
-          "name": "stdout"
-        },
-        {
-          "output_type": "stream",
-          "text": [
+            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
             "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:188: SettingWithCopyWarning: \n",
             "A value is trying to be set on a copy of a slice from a DataFrame.\n",
             "Try using .loc[row_indexer,col_indexer] = value instead\n",
@@ -850,6 +824,26 @@
             "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n"
           ],
           "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "     date province  confirmed  ...  confirmed_diff  released_diff  deceased_diff\n",
+            "680     2       서울   0.790801  ...        0.790801       0.092431       0.000000\n",
+            "1207    3       서울   3.832065  ...        3.040995       0.914353       0.000000\n",
+            "1717    4       서울   1.881402  ...       -1.953369       2.549660       0.020562\n",
+            "2244    5       서울   2.344595  ...        0.462749      -1.768729       0.000000\n",
+            "2754    6       서울   4.639514  ...        2.294039       1.892839       0.010287\n",
+            "...   ...      ...        ...  ...             ...            ...            ...\n",
+            "696     2       제주   0.298118  ...        0.298118       0.000000       0.000000\n",
+            "1223    3       제주   1.043985  ...        0.745703       0.447422       0.000000\n",
+            "1733    4       제주   0.596485  ...       -0.447364       0.298243       0.000000\n",
+            "2260    5       제주   0.298155  ...       -0.298155       0.000000       0.000000\n",
+            "2770    6       제주   0.595845  ...        0.297922      -0.297922       0.000000\n",
+            "\n",
+            "[85 rows x 11 columns]\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -862,7 +856,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 714
         },
-        "outputId": "9c616847-d17d-44e5-c017-fdc10d7515c4"
+        "outputId": "da7cc047-d1ab-4133-b587-2235b4775063"
       },
       "source": [
         "print(df.dtypes)\n",
@@ -929,7 +923,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 459
         },
-        "outputId": "62a63588-a9fe-49ab-ee47-2be2a8d7a98b"
+        "outputId": "4fe98966-406c-4198-b843-c6e09e539f26"
       },
       "source": [
         "df = pd.merge(df,df_Time,left_on=[\"ta_ym\"],right_on=[\"date\"],how=\"left\")\n",
@@ -1021,7 +1015,8 @@
         "del df['nationwide_released_diff']\n",
         "del df['nationwide_deceased_diff']\n",
         "\n",
-        "df.iloc[:,:15].to_csv(\"/gdrive/My Drive/한양대학교/2020년 문화관광 빅데이터 분석대회/data/dataset.csv\",encoding='cp949', index=False)"
+        "df.iloc[:,:15].to_csv(\"/gdrive/My Drive/한양대학교/2020년 문화관광 빅데이터 분석대회/data/dataset.csv\",encoding='cp949', index=False)\n",
+        "#df.to_csv(\"/gdrive/My Drive/한양대학교/2020년 문화관광 빅데이터 분석대회/data/dataset.csv\",encoding='cp949', index=False)"
       ],
       "execution_count": 7,
       "outputs": []
@@ -1031,14 +1026,23 @@
       "metadata": {
         "id": "Uwyql4cDqpL0",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 1000
+        },
+        "outputId": "11f57f76-0c05-406e-868c-9192eb006c4b"
       },
       "source": [
         "from sklearn.cluster import KMeans\n",
         "\n",
         "df = pd.read_csv(\"/gdrive/My Drive/한양대학교/2020년 문화관광 빅데이터 분석대회/data/dataset.csv\", encoding = 'cp949')\n",
         "\n",
-        "model = KMeans(n_clusters=5)\n",
+        "df = df[df['v2']!='경북']\n",
+        "df = df[df['v2']!='대구']\n",
+        "\n",
+        "n = 5\n",
+        "\n",
+        "model = KMeans(n_clusters=n)\n",
         "\n",
         "model.fit(df.iloc[:,5:15])\n",
         "\n",
@@ -1047,10 +1051,157 @@
         "\n",
         "print(df.groupby(df['군집1']).count())\n",
         "\n",
-        "df.to_csv(\"/gdrive/My Drive/한양대학교/2020년 문화관광 빅데이터 분석대회/data/dataset.csv\",encoding='cp949', index=False)"
+        "for i in range(n):\n",
+        "    print(df[df['군집1']==i].groupby(df[df['군집1']==i]['v2']).count())\n",
+        "    print(df[df['군집1']==i].groupby(df[df['군집1']==i]['gb3']).count())\n",
+        "    print(df[df['군집1']==i].groupby(df[df['군집1']==i]['sex_ccd']).count())\n",
+        "    print('======================================================================')\n",
+        "\n",
+        "#df.to_csv(\"/gdrive/My Drive/한양대학교/2020년 문화관광 빅데이터 분석대회/data/dataset.csv\",encoding='cp949', index=False)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "       v2   gb3  sex_ccd  ...  confirmed_diff  released_diff  deceased_diff\n",
+            "군집1                       ...                                              \n",
+            "0    1720  1720     1720  ...            1720           1720           1720\n",
+            "1    1040  1040     1040  ...            1040           1040           1040\n",
+            "2     120   120      120  ...             120            120            120\n",
+            "3      80    80       80  ...              80             80             80\n",
+            "4      40    40       40  ...              40             40             40\n",
+            "\n",
+            "[5 rows x 15 columns]\n",
+            "     v2  gb3  sex_ccd  ...  released_diff  deceased_diff  군집1\n",
+            "v2                     ...                                   \n",
+            "강원   80   80       80  ...             80             80   80\n",
+            "경기   80   80       80  ...             80             80   80\n",
+            "경남   80   80       80  ...             80             80   80\n",
+            "광주  200  200      200  ...            200            200  200\n",
+            "대전  160  160      160  ...            160            160  160\n",
+            "부산   40   40       40  ...             40             40   40\n",
+            "서울   80   80       80  ...             80             80   80\n",
+            "세종   40   40       40  ...             40             40   40\n",
+            "울산   80   80       80  ...             80             80   80\n",
+            "인천  120  120      120  ...            120            120  120\n",
+            "전남  200  200      200  ...            200            200  200\n",
+            "전북  200  200      200  ...            200            200  200\n",
+            "제주  200  200      200  ...            200            200  200\n",
+            "충남   40   40       40  ...             40             40   40\n",
+            "충북  120  120      120  ...            120            120  120\n",
+            "\n",
+            "[15 rows x 16 columns]\n",
+            "         v2  gb3  sex_ccd  ...  released_diff  deceased_diff  군집1\n",
+            "gb3                        ...                                   \n",
+            "문화예술활동  430  430      430  ...            430            430  430\n",
+            "스포츠활동   430  430      430  ...            430            430  430\n",
+            "여행      430  430      430  ...            430            430  430\n",
+            "취미오락    430  430      430  ...            430            430  430\n",
+            "\n",
+            "[4 rows x 16 columns]\n",
+            "          v2  gb3  sex_ccd  ...  released_diff  deceased_diff  군집1\n",
+            "sex_ccd                     ...                                   \n",
+            "F        860  860      860  ...            860            860  860\n",
+            "M        860  860      860  ...            860            860  860\n",
+            "\n",
+            "[2 rows x 16 columns]\n",
+            "======================================================================\n",
+            "     v2  gb3  sex_ccd  ...  released_diff  deceased_diff  군집1\n",
+            "v2                     ...                                   \n",
+            "강원  120  120      120  ...            120            120  120\n",
+            "경기  120  120      120  ...            120            120  120\n",
+            "경남  120  120      120  ...            120            120  120\n",
+            "대전   40   40       40  ...             40             40   40\n",
+            "부산  160  160      160  ...            160            160  160\n",
+            "서울   80   80       80  ...             80             80   80\n",
+            "울산  120  120      120  ...            120            120  120\n",
+            "인천   40   40       40  ...             40             40   40\n",
+            "충남  160  160      160  ...            160            160  160\n",
+            "충북   80   80       80  ...             80             80   80\n",
+            "\n",
+            "[10 rows x 16 columns]\n",
+            "         v2  gb3  sex_ccd  ...  released_diff  deceased_diff  군집1\n",
+            "gb3                        ...                                   \n",
+            "문화예술활동  260  260      260  ...            260            260  260\n",
+            "스포츠활동   260  260      260  ...            260            260  260\n",
+            "여행      260  260      260  ...            260            260  260\n",
+            "취미오락    260  260      260  ...            260            260  260\n",
+            "\n",
+            "[4 rows x 16 columns]\n",
+            "          v2  gb3  sex_ccd  ...  released_diff  deceased_diff  군집1\n",
+            "sex_ccd                     ...                                   \n",
+            "F        520  520      520  ...            520            520  520\n",
+            "M        520  520      520  ...            520            520  520\n",
+            "\n",
+            "[2 rows x 16 columns]\n",
+            "======================================================================\n",
+            "    v2  gb3  sex_ccd  ...  released_diff  deceased_diff  군집1\n",
+            "v2                    ...                                   \n",
+            "서울  40   40       40  ...             40             40   40\n",
+            "세종  40   40       40  ...             40             40   40\n",
+            "인천  40   40       40  ...             40             40   40\n",
+            "\n",
+            "[3 rows x 16 columns]\n",
+            "        v2  gb3  sex_ccd  ...  released_diff  deceased_diff  군집1\n",
+            "gb3                       ...                                   \n",
+            "문화예술활동  30   30       30  ...             30             30   30\n",
+            "스포츠활동   30   30       30  ...             30             30   30\n",
+            "여행      30   30       30  ...             30             30   30\n",
+            "취미오락    30   30       30  ...             30             30   30\n",
+            "\n",
+            "[4 rows x 16 columns]\n",
+            "         v2  gb3  sex_ccd  ...  released_diff  deceased_diff  군집1\n",
+            "sex_ccd                    ...                                   \n",
+            "F        60   60       60  ...             60             60   60\n",
+            "M        60   60       60  ...             60             60   60\n",
+            "\n",
+            "[2 rows x 16 columns]\n",
+            "======================================================================\n",
+            "    v2  gb3  sex_ccd  ...  released_diff  deceased_diff  군집1\n",
+            "v2                    ...                                   \n",
+            "세종  80   80       80  ...             80             80   80\n",
+            "\n",
+            "[1 rows x 16 columns]\n",
+            "        v2  gb3  sex_ccd  ...  released_diff  deceased_diff  군집1\n",
+            "gb3                       ...                                   \n",
+            "문화예술활동  20   20       20  ...             20             20   20\n",
+            "스포츠활동   20   20       20  ...             20             20   20\n",
+            "여행      20   20       20  ...             20             20   20\n",
+            "취미오락    20   20       20  ...             20             20   20\n",
+            "\n",
+            "[4 rows x 16 columns]\n",
+            "         v2  gb3  sex_ccd  ...  released_diff  deceased_diff  군집1\n",
+            "sex_ccd                    ...                                   \n",
+            "F        40   40       40  ...             40             40   40\n",
+            "M        40   40       40  ...             40             40   40\n",
+            "\n",
+            "[2 rows x 16 columns]\n",
+            "======================================================================\n",
+            "    v2  gb3  sex_ccd  ...  released_diff  deceased_diff  군집1\n",
+            "v2                    ...                                   \n",
+            "세종  40   40       40  ...             40             40   40\n",
+            "\n",
+            "[1 rows x 16 columns]\n",
+            "        v2  gb3  sex_ccd  ...  released_diff  deceased_diff  군집1\n",
+            "gb3                       ...                                   \n",
+            "문화예술활동  10   10       10  ...             10             10   10\n",
+            "스포츠활동   10   10       10  ...             10             10   10\n",
+            "여행      10   10       10  ...             10             10   10\n",
+            "취미오락    10   10       10  ...             10             10   10\n",
+            "\n",
+            "[4 rows x 16 columns]\n",
+            "         v2  gb3  sex_ccd  ...  released_diff  deceased_diff  군집1\n",
+            "sex_ccd                    ...                                   \n",
+            "F        20   20       20  ...             20             20   20\n",
+            "M        20   20       20  ...             20             20   20\n",
+            "\n",
+            "[2 rows x 16 columns]\n",
+            "======================================================================\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1060,16 +1211,7 @@
         "colab": {}
       },
       "source": [
-        "import pandas as pd\n",
-        "import numpy as np\n",
-        "\n",
-        "df = pd.read_csv(\"/gdrive/My Drive/한양대학교/2020년 문화관광 빅데이터 분석대회/data/dataset.csv\", encoding = 'cp949')\n",
-        "\n",
-        "df['군집'] = df['군집'].astype('object')\n",
-        "df['군집 2'] = df['군집 2'].astype('object')\n",
-        "\n",
-        "print(df)\n",
-        "print(df.dtypes)"
+        ""
       ],
       "execution_count": null,
       "outputs": []
